--- a/nav-mobile-first.html
+++ b/nav-mobile-first.html
@@ -42,7 +42,7 @@
     </nav>
 
     <script>
-        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        /* Toggle between adding and removing the "hidden" class to topnav when the user clicks on the icon */
         function toggleNav() {
         var x = document.getElementById("topNav");
         if (x.classList.contains("hidden")) {
